# wq-community-skills

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: CASE_STUDIES.md  COMMUNITY_SKILL_CATALOG.md  FORUM_TO_SKILL_WORKFLOW.md  PRIVACY_AND_SAFETY.md
examples/: community_comments.synthetic.jsonl  community_posts.synthetic.jsonl  community_skill_memory.synthetic.jsonl  sanitized_case_metrics.json  submission_policy.synthetic.json
tests/: test_cli.py  test_pipeline_demo.py  test_privacy.py  test_repair.py  test_templates.py
wq_skill_pipeline/: __init__.py  cli.py  community.py  io_utils.py  llm.py  paths.py  pipeline.py  privacy.py  repair.py  reports.py  skills.py  templates.py
